--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,14 @@
+.header {
+    border-top-right-radius: 30px;
+    border-radius: 30px;
+}
+
+.nav {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+}
+
 .menu, .menu-item {
     margin: 0 auto;
     padding: 0;
@@ -16,5 +27,6 @@
 .link {
     text-decoration: none;
     text-align: center;
+    color: black;
 }
 
