--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .page {
     margin: 0 auto;
     padding: 0;
-    height: 2200px;
+    max-width: 1440px;
+    max-height: 2200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -23,14 +28,30 @@
 }
 
 .main {
-    height: 2000px;
+    max-height: 1152px;
 }
 
 .footer {
-    height: 150px;
+    max-height: 150px;
 }
 
 .container {
     width: 100%;
     height: 100%;
 }
+
+.border {
+    border-bottom: #000 2px solid;
+    width: 50px;
+}
+
+h1, p {
+    margin: 0;
+    text-transform: uppercase;
+}
+
+h2, h3 {
+    text-transform: capitalize;
+}
+
+
