--- a/styles/header.css
+++ b/styles/header.css
@@ -17,6 +17,18 @@
     align-items: center;
 }
 
+
+.menu-item {
+    height: 100%;
+    position: relative;
+    transition: 1s;
+}
+
+.menu-item:hover {
+    z-index: 10;
+    transform: scale(1.2);
+}
+
 .menu {
     width: 100%;
     height: 100%;
