--- a/plants/css/header.css
+++ b/plants/css/header.css
@@ -10,6 +10,11 @@
     justify-content: space-between;
 }
 
+.logo-png {
+    width: 20px;
+    height: 20px;
+}
+
 .navbar {
     padding: auto;
     width: 1220px;
