--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -12,7 +12,6 @@ body {
 .header, .main, .footer {
     width: 100%;
     display: flex;
-    flex-direction: column;
 }
 
 .main, .footer {
@@ -22,12 +21,16 @@ body {
 .header {
     height: 134px;
     background-color: #EDF2EC;
+}
+
+.header, .footer {
     justify-content: center;
     align-items: center;
 }
 
 .main {
     height: 3048px;
+    flex-direction: column;
 }
 
 .footer {
