feat: added markup into section main and added styles

--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -1,10 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
+    scroll-behavior: smooth;
     background-color: #F5F5F5;
 }
 
 body {
     margin: 0 auto;
     max-width: 1440px;
+    max-height: 3870px;
     display: flex;
     flex-direction: column;
 }
@@ -29,7 +37,7 @@ body {
 }
 
 .main {
-    height: 3048px;
+    height: 3606px;
     flex-direction: column;
 }
 
