--- a/plants/css/footer.css
+++ b/plants/css/footer.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: 'Inter';
-    src: url(../fonts/Inter.ttf);
-}
 
 .content, .footer-data, .social-list {
     display: flex;
@@ -15,21 +11,31 @@
     height: 50px;
 }
 
-
 .footer-data {
-    width: 182px;
+    width: 170px;
     justify-content: space-between;
 }
 
-.footer-text {
-    font-family: 'Inter';
-    font-size: 20px;
-    font-weight: 400;
+.label {
+    margin-left: 15px;
+}
+
+.footer-link {
+    text-decoration: none;
     color: #000000;
 }
 
 .social-list {
     width: 188px;
+}
+
+.social-items {
+    width: 100%;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .social {
