--- a/plants/css/header.css
+++ b/plants/css/header.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: Inika;
-    src: url(../fonts/Inika.ttf);
-}
-
 .navbar, .logo, .menu-item {
     display: flex;
     flex-direction: row;
@@ -16,7 +11,6 @@
 }
 
 .navbar {
-    padding: auto;
     width: 1220px;
     height: 50px;
 }
@@ -25,31 +19,25 @@
     width: 79.17px;
     height: 21.04px;
     align-items: center;
-}
-
-.logo-text, .menu-text {
-    font-family: 'Inika';
-    font-size: 16px;
+    margin-bottom: 5px;
 }
 
 .logo-text {
     width: 57px;
     height: 17px;
-    font-weight: 400;
 }
 
 .menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     height: 100%;
     width: 452px;
 }
 
 .menu-item {
-    padding: 0;
+    width: 100%;
     list-style: none;
-}
-
-.menu-text {
-    font-weight: 700;
 }
 
 .menu-text a {
@@ -60,7 +48,7 @@
 
 .menu-text a:hover {
     color: #E06733;
-    text-shadow: 2px 4px 4px #000000;
+    text-shadow: 0px 3px 2px rgba(0, 0, 0, 25%);
 }
 
 .menu-text a {
