--- a/plants/css/style.css
+++ b/plants/css/style.css
@@ -11,14 +11,14 @@ html {
 
 body {
     margin: 0 auto;
-    max-width: 1440px;
-    max-height: 3870px;
+    width: 1440px;
+    height: 3870px;
     display: flex;
     flex-direction: column;
 }
 
 .header, .main, .footer {
-    width: 100%;
+    max-width: 1440px;
     display: flex;
 }
 
