--- a/plants/css/fonts.css
+++ b/plants/css/fonts.css
@@ -31,7 +31,7 @@
     font-family: 'Inter';
 }
 
-.btn-p, .welcome-text, .about-p, .description {
+.btn-p, .welcome-text, .about-p, .description, .accordion-btn {
     font-family: 'Inter Regular';
 }
 
@@ -51,7 +51,7 @@ h1, .about-h2, .welcome-text, .about-p  {
     text-shadow: 0px 3px 2px rgba(0,0,0,0.25);
 }
 
-h1, .title {
+h1, .title, .price-select {
     font-family: 'Inter Bold';
 }
 
@@ -66,7 +66,7 @@ h2 {
     font-size: 40px;
 }
 
-.contact-h2, .price-p {
+.contact-h2, .price-button {
     font-family: 'Inika Bold';
 }
 
@@ -123,13 +123,13 @@ h2 {
     height: 39px;
 }
 
-.welcome-p {
+.welcome-button {
     font-size: 16px;
     line-height: 20px;
     color: #000000;
 }
 
-.price-p {
+.price-button {
     font-size: 20px;
     color: #E06733;
 }
@@ -164,4 +164,17 @@ h2 {
     text-align: center;
     color: #717171;
     font-size: 16px;
+}
+
+.accordion-btn, .price-select {
+    font-size: 20px;
+}
+
+.price-select {
+    padding-left: 40px;
+}
+
+.accordion-btn {
+    letter-spacing: 5%;
+    padding-left: 15px;
 }
